# vertical-python

./: README.md  pylock.toml  pyproject.toml
.github/workflows/: test.yml
examples/: hello_world.vpy
src/vertical_python/: __init__.py  codec.py
tests/: test_encode_decode.py  test_import.py
tests/data/: codec_eg.py
