[project]
name = "vertical-python"
version = "0.1.0"
description = "Python but vertical"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/sneakers-the-rat/vertical-python/"
repository = "https://github.com/sneakers-the-rat/vertical-python/"


[project.scripts]
vertical-python = "vertical_python:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
